Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-15413

[system-test] Memcached crashes @ CheckpointManager::queueDirty

    XMLWordPrintable

Details

    Description

      Build
      ------
      4.0.0-3240 (today's build)

      Found during all-component system test.

      core BT - https://friendpaste.com/mi3YYr9D3L00k2ziETav

      Thread 1 (Thread 0x7f7807c40700 (LWP 8294)):
      #0 0x00007f7817f8f8a5 in raise () from /lib64/libc.so.6
      #1 0x00007f7817f91085 in abort () from /lib64/libc.so.6
      #2 0x00007f781a739806 in cb_assert_die (expression=Unhandled dwarf expression opcode 0xf3
      ) at /home/couchbase/jenkins/workspace/sherlock-unix/platform/src/cbassert.c:48

      #3 0x00007f780f8e461b in CheckpointManager::queueDirty (this=0x7f78016dda98, vb=..., qi=..., genSeqno=Unhandled dwarf expression opcode 0xf3
      ) at /home/couchbase/jenkins/workspace/sherlock-unix/ep-engine/src/checkpoint.cc:850
      #4 0x00007f780f90f833 in EventuallyPersistentStore::queueDirty (this=0x7f7816310000, vb=..., v=0x7f7761601210, plh=0x7f7807c3fae0, seqno=0x0, tapBackfill=Unhandled dwarf expression opcode 0xf3
      ) at /home/couchbase/jenkins/workspace/sherlock-unix/ep-engine/src/ep.cc:3222
      #5 0x00007f780f91143f in EventuallyPersistentStore::setWithMeta (this=0x7f7816310000, itm=..., cas=0, seqno=Unhandled dwarf expression opcode 0xf3
      ) at /home/couchbase/jenkins/workspace/sherlock-unix/ep-engine/src/ep.cc:2095
      #6 0x00007f780f900a86 in PassiveStream::processMutation (this=0x7f78015518c0, mutation=0x7f7768a12a60) at /home/couchbase/jenkins/workspace/sherlock-unix/ep-engine/src/dcp-stream.cc:1002
      --Type <return> to continue, or q <return> to quit--
      #7 0x00007f780f900f1b in PassiveStream::processBufferedMessages (this=0x7f78015518c0, processed_bytes=@0x7f7807c3fc20) at /home/couchbase/jenkins/workspace/sherlock-unix/ep-engine/src/dcp-stream.cc:944
      #8 0x00007f780f8f2435 in DcpConsumer::processBufferedItems (this=0x7f7801559400) at /home/couchbase/jenkins/workspace/sherlock-unix/ep-engine/src/dcp-consumer.cc:666
      #9 0x00007f780f8f258d in Processer::run (this=0x7f7803e3d290) at /home/couchbase/jenkins/workspace/sherlock-unix/ep-engine/src/dcp-consumer.cc:48
      #10 0x00007f780f94efc7 in ExecutorThread::run (this=0x7f78163ab1e0) at /home/couchbase/jenkins/workspace/sherlock-unix/ep-engine/src/executorthread.cc:119
      #11 0x00007f780f94f619 in launch_executor_thread (arg=0x7f78163ab1e0) at /home/couchbase/jenkins/workspace/sherlock-unix/ep-engine/src/executorthread.cc:34
      #12 0x00007f781a738bb8 in platform_thread_wrap (arg=0x7f7814f90b40) at /home/couchbase/jenkins/workspace/sherlock-unix/platform/src/cb_pthreads.c:23
      #13 0x00007f7818ea3851 in start_thread () from /lib64/libpthread.so.0
      #14 0x00007f781804590d in clone () from /lib64/libc.so.6

      core file can be found under /data at 172.23.105.45

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              apiravi Aruna Piravi (Inactive)
              apiravi Aruna Piravi (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty